# VoxelGameClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VoxelGameClient.html
assets/fonts/: ter-u32n.png.txt
assets/shaders/: color_fragment.glsl  color_vertex.glsl  font_fragment.glsl  font_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl
assets/shaders/entity/: texture_fragment.glsl
assets/shaders/ui/: color_fragment.glsl  color_vertex.glsl  font_fragment.glsl  font_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl
assets/shaders/world/: texture_vertex.glsl
cmake/: FindGLEW.cmake  FindSDL2.cmake
lib/glm/: manual.md
lib/glm/doc/api/: a00001_source.html  a00002_source.html  a00003_source.html  a00004_source.html  a00005_source.html  a00006_source.html  a00007.html  a00007_source.html  a00008.html  a00008_source.html  a00009.html  a00009_source.html  a00010.html  a00010_source.html  a00011.html  a00011_source.html  a00012.html  a00012_source.html  a00013.html  a00013_source.html  a00014.html  a00014_source.html  a00015.html  a00015_source.html  a00016.html  a00016_source.html  a00017.html  a00017_source.html  a00018.html  a00018_source.html  a00019_source.html  a00020_source.html  a00021.html  a00021_source.html  a00022.html  a00022_source.html  a00023.html  a00023_source.html  a00024.html  a00024_source.html  (+563 more)
lib/stb/: stb_image.h
scripts/: make_font.py  make_unwrap.py  pack_assets.py
src/: Asset.cpp  Asset.h  GameEngine.cpp  GameEngine.h  PerformanceCounter.h  SDLGameEngine.cpp  SDLGameEngine.h  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h  Worker.h  main.cpp
src/client/: GameEngine.cpp  GameEngine.h  OpenGL.cpp  OpenGL.h  SDLGameEngine.cpp  SDLGameEngine.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
src/client/net/: BinaryClientTransport.cpp  BinaryClientTransport.h  ClientTransport.cpp  ClientTransport.h  WebSocketClientTransport.cpp  WebSocketClientTransport.h
src/client/ui/: Crosshair.cpp  Crosshair.h  Inventory.cpp  Inventory.h  TextRenderer.cpp  TextRenderer.h  UIBase.cpp  UIBase.h  UIJoystick.cpp  UIJoystick.h  UIRoot.cpp  UIRoot.h  VoxelOutline.cpp  VoxelOutline.h
src/client/world/: Entity.cpp  Entity.h  Model.cpp  Model.h  VoxelWorldRenderer.cpp  VoxelWorldRenderer.h
src/net/: ClientMessage.h  ServerMessage.h
src/server/: GameServerEngine.cpp  GameServerEngine.h  main.cpp
src/server/net/: BinaryServerTransport.cpp  BinaryServerTransport.h  ClientConnection.cpp  ClientConnection.h  ServerTransport.h  WebSocketServerConfig.h  WebSocketServerTransport.cpp  WebSocketServerTransport.h
src/server/world/: VoxelLightComputer.cpp  VoxelLightComputer.h  VoxelWorldGenerator.cpp  VoxelWorldGenerator.h  VoxelWorldStorage.cpp  VoxelWorldStorage.h  VoxelWorldUpdater.cpp  VoxelWorldUpdater.h
src/ui/: UIBase.h  UIJoystick.cpp  UIJoystick.h  UIRoot.cpp  UIRoot.h
src/world/: Entity.cpp  Entity.h  EntityPhysics.cpp  EntityPhysics.h  LiquidVoxelType.cpp  LiquidVoxelType.h  Model.cpp  Model.h  Player.cpp  Player.h  Voxel.cpp  Voxel.h  VoxelChunk.cpp  VoxelChunk.h  VoxelLocation.h  VoxelTypeRegistry.cpp  VoxelTypeRegistry.h  VoxelTypes.cpp  VoxelTypes.h  VoxelWorld.cpp  VoxelWorld.h  VoxelWorldRenderer.cpp  VoxelWorldRenderer.h  VoxelWorldUtils.cpp  VoxelWorldUtils.h
tst/: VoxelLocation.cpp  VoxelSerialization.cpp  VoxelWorld.cpp  main.cpp
